--- a/src/tsconfig.monaco.json
+++ b/src/tsconfig.monaco.json
@@ -10,7 +10,8 @@
 		"preserveConstEnums": true,
 		"target": "es5",
 		"sourceMap": false,
-		"declaration": true
+		"declaration": true,
+		"stripInternal": true
 	},
 	"include": [
 		"typings/require.d.ts",
